--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="config.css">
                
        <div id="mnu">
-       <img src="file.png" height="100px" width="130px">
+       <img src="F:\project\website\images\file.png" height="100px" width="130px">
        <a id="an" href="#">Help</a>
        <a id="an" href="About.html">About</a>
        <a id="an" href="location.html">Location</a>
@@ -23,7 +23,7 @@
        <a  id="an"href="#" >Home</a>
     </div>
     </head>
-    <body id="bd" background="header-background.jpg">
+    <body id="bd" background="F:\project\website\images\header-background.jpg">
     <div align="center" id ="cmp">
             <h1>COMPUTER SOFTWARE COLLEGE<BR>
                 PAMMAL </h1>
@@ -35,4 +35,5 @@
        </div>
     </body>
     <iframe src="registerform.html" width="100%" height="160%" scrolling="no"></iframe>
+    <iframe src="location.html" width="100%" height="100%" scrolling="no"></iframe>
 </html>
