--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
        <a  id="an"href="#" >Home</a>
     </div>
     </head>
-    <body id="bd" background="F:\project\website\images\header-background.jpg">
+    <body id="bd" background="header-background.jpg">
     <div align="center" id ="cmp">
             <h1>COMPUTER SOFTWARE COLLEGE<BR>
                 PAMMAL </h1>
