--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="config.css">
                
        <div id="mnu">
-       <img src="F:\project\website\images\file.png" height="100px" width="130px">
+       <img src="file.png" height="100px" width="130px">
        <a id="an" href="#">Help</a>
        <a id="an" href="About.html">About</a>
        <a id="an" href="location.html">Location</a>
