--- a/coursedetails.html
+++ b/coursedetails.html
@@ -20,7 +20,7 @@
     </div>
     
     <div class="course">
-        <a href="#"> <img src="F:\project\website\images\hdcat.png" height="50%" width="90%"></a>
+        <a href="#"> <img src="hdcat.png" height="50%" width="90%"></a>
         
 </div>
 
