--- a/coursedetails.html
+++ b/coursedetails.html
@@ -20,20 +20,20 @@
     </div>
     
     <div class="course">
-        <a href="#"> <img src="hdcat.png" height="50%" width="90%"></a>
+        <a href="#"> <img src="HDCAP.png" height="50%" width="90%"></a>
         
 </div>
 
 <div class="course">
-    <a href="#"> <img src="hdcap.png" height="50%" width="90%"></a>
+    <a href="#"> <img src="HDCAT.png" height="50%" width="90%"></a>
 </div>
 
 <div class="course">
-    <a href="#"> <img src="dcap.png" height="50%" width="90%"></a>
+    <a href="#"> <img src="DCAP.png" height="50%" width="90%"></a>
 </div>
 
 <div class="course">
-    <a href="#">   <img src="dcat.png" height="50%" width="90%"></a>
+    <a href="#">   <img src="DCAT.png" height="50%" width="90%"></a>
 </div>
 <div class="course">
     <a href="#">   <img src="HDFD.png" height="50%" width="90%"></a>
