--- a/home.html
+++ b/home.html
@@ -1,8 +1,4 @@
-<html <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
+
 <html>
     <head>
         <meta charset="utf-8">
@@ -10,11 +6,10 @@
         <title>CSC PAMMAL</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
         <link rel="stylesheet" href="config.css">
                
        <div id="mnu">
-       <img src="file.png" height="100px" width="130px">
+       <img src="F:\project\website\images\file.png" height="100px" width="130px">
        <a id="an" href="#">Help</a>
        <a id="an" href="About.html">About</a>
        <a id="an" href="location.html">Location</a>
@@ -23,7 +18,7 @@
        <a  id="an"href="#" >Home</a>
     </div>
     </head>
-    <body id="bd" background="header-background.jpg">
+    <body id="bd" background="F:\project\website\images\header-background.jpg">
     <div align="center" id ="cmp">
             <h1>COMPUTER SOFTWARE COLLEGE<BR>
                 PAMMAL </h1>
@@ -35,5 +30,5 @@
        </div>
     </body>
     <iframe src="registerform.html" width="100%" height="160%" scrolling="no"></iframe>
-    <iframe src="location.html" width="100%" height="100%" scrolling="no"></iframe>
+    <iframe src="coursedetails.html" width="100%" height="110%" scrolling="no"></iframe>
 </html>
