--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="config.css">
                
        <div id="mnu">
-       <img src="F:\project\website\images\file.png" height="100px" width="130px">
+       <img src="file.png" height="100px" width="130px">
        <a id="an" href="#">Help</a>
        <a id="an" href="About.html">About</a>
        <a id="an" href="location.html">Location</a>
@@ -18,7 +18,7 @@
        <a  id="an"href="#" >Home</a>
     </div>
     </head>
-    <body id="bd" background="F:\project\website\images\header-background.jpg">
+    <body id="bd" background="header-background.jpg">
     <div align="center" id ="cmp">
             <h1>COMPUTER SOFTWARE COLLEGE<BR>
                 PAMMAL </h1>
