--- a/coursedetails.html
+++ b/coursedetails.html
@@ -61,7 +61,7 @@ body {
 <div class="flip-card">
   <div class="flip-card-inner">
     <div class="flip-card-front">
-      <img src="F:\project\website\images\dmo.png" alt="Avatar" style="width:300px;height:300px;">
+      <img src="dmo.png" alt="Avatar" style="width:300px;height:300px;">
     </div>
     <div class="flip-card-back">
       <p>WINDOWS</p>
@@ -74,7 +74,7 @@ body {
 <div class="flip-card">
     <div class="flip-card-inner">
       <div class="flip-card-front">
-        <img src="F:\project\website\images\HDCAP.png" alt="Avatar" style="width:300px;height:300px;">
+        <img src="HDCAP.png" alt="Avatar" style="width:300px;height:300px;">
       </div>
       <div class="flip-card-back">
         <p>WINDOWS</p>
@@ -92,7 +92,7 @@ body {
   <div class="flip-card">
     <div class="flip-card-inner">
       <div class="flip-card-front">
-        <img src="F:\project\website\images\HDCAT.png" alt="Avatar" style="width:300px;height:300px;">
+        <img src="HDCAT.png" alt="Avatar" style="width:300px;height:300px;">
       </div>
       <div class="flip-card-back">
         <p>WINDOWS</p>
@@ -109,7 +109,7 @@ body {
   <div class="flip-card">
     <div class="flip-card-inner">
       <div class="flip-card-front">
-        <img src="F:\project\website\images\DCAT.png" alt="Avatar" style="width:300px;height:300px;">
+        <img src="DCAT.png" alt="Avatar" style="width:300px;height:300px;">
       </div>
       <div class="flip-card-back">
         <p>WINDOWS</p>
@@ -122,7 +122,7 @@ body {
   <div class="flip-card">
     <div class="flip-card-inner">
       <div class="flip-card-front">
-        <img src="F:\project\website\images\DCAP.png" alt="Avatar" style="width:300px;height:300px;">
+        <img src="DCAP.png" alt="Avatar" style="width:300px;height:300px;">
       </div>
       <div class="flip-card-back">
         <p>WINDOWS</p>
@@ -140,7 +140,7 @@ body {
   <div class="flip-card">
     <div class="flip-card-inner">
       <div class="flip-card-front">
-        <img src="F:\project\website\images\HDFD.png" alt="Avatar" style="width:300px;height:300px;">
+        <img src="HDFD.png" alt="Avatar" style="width:300px;height:300px;">
       </div>
       <div class="flip-card-back">
         <p>C LANGUAGE</p>
@@ -171,7 +171,7 @@ body {
   <div class="flip-card">
     <div class="flip-card-inner">
       <div class="flip-card-front">
-        <img src="F:\project\website\images\ADPP.png" alt="Avatar" style="width:300px;height:300px;">
+        <img src="ADPP.png" alt="Avatar" style="width:300px;height:300px;">
       </div>
       <div class="flip-card-back">
         <p>WINDOWS</p>
@@ -184,7 +184,7 @@ body {
   <div class="flip-card">
     <div class="flip-card-inner">
       <div class="flip-card-front">
-        <img src="F:\project\website\images\ADJP.png" alt="Avatar" style="width:300px;height:300px;">
+        <img src="ADJP.png" alt="Avatar" style="width:300px;height:300px;">
       </div>
       <div class="flip-card-back">
         <p>C LANGUAGE</p>
