--- a/home.html
+++ b/home.html
@@ -5,7 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>CSC PAMMAL</title>
         <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="config.css">
                
        <div id="mnu">
@@ -13,9 +14,9 @@
        <a id="an" href="#">Help</a>
        <a id="an" href="About.html">About</a>
        <a id="an" href="location.html">Location</a>
-       <a id="an" href="coursedetails.html">Course Details</a>
+       <a id="an" name="cd" href="#cd">Course Details</a>
        <a id="an" href="#">Contact Us</a>
-       <a  id="an"href="#" >Home</a>
+       <a  id="an" name="h"href="#h" >Home</a>
     </div>
     </head>
     <body id="bd" background="header-background.jpg">
@@ -29,6 +30,13 @@
         <button id="btn2">Enquiry</button>
        </div>
     </body>
-    <iframe src="registerform.html" width="100%" height="160%" scrolling="no"></iframe>
-    <iframe src="coursedetails.html" width="100%" height="110%" scrolling="no"></iframe>
+    <iframe name="rf" src="registerform.html" width="100%" height="160%" scrolling="no"></iframe>
+    <iframe name="cd" src="coursedetails.html" width="100%" height="110%" scrolling="no"></iframe>
+    <style>
+        @media  screen and (max-width: 600px) {
+            * {
+               font-size: small;
+            }
+        }
+    </style>
 </html>
